log
Thu Apr 30 08:13:02 PM UTC 2026: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/60
8389d45
Thu Apr 30 08:46:29 PM UTC 2026: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:121:16: error: ‘auxAvance’ undeclared (first use in this function)
  121 |         while (auxAvance -> left != NULL){
      |                ^~~~~~~~~
treemap.c:121:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:135:9: error: ‘p’ undeclared (first use in this function)
  135 |     if (p != NULL) return p -> pair;
      |         ^
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
c196059
Thu Apr 30 08:47:09 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
134f920
